third_party/move/move-compiler-v2/tests/checking/receiver/call_errors_2.exp

Diagnostics:
error: unable to infer instantiation of type `_` (consider providing type arguments or annotating the type)
   ┌─ tests/checking/receiver/call_errors_2.move:12:9
   │
12 │         s.receiver_needs_type_args(x)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
